# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs  utils.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: lib.rs  utils.rs
debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: progress.rs
